# leafletslm

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  Makefile  MakefileAlternative  README.md  compose.yaml  dagster.yaml  entrypoint.sh  mkdocs.yaml  pyproject.toml  workspace.yaml
.dagster/: dagster.yaml  docker.yaml  workspace.yaml
.devcontainer/: devcontainer.json
.github/workflows/: todo.yaml
.nginx/: nginx.conf
.nginx/snippets/: proxy_params.conf
.nginx/www/: 404.html
.scripts/: bash_options
.secrets/: tailscale.env.example
.tailscale/: chat.json  mkdocs.json  nginx.json
docs/: LICENSE.md  architecture.md  getting-started.md  index.md  infrastructure.md  mkdocs.yml
docs/architecture/: index.md  infrastructure.md  roadmap.md  standards.md
docs/architecture/roadmap/: index.md  phase1.md
docs/assets/stylesheets/: mermaid.css
docs/design/: index.md
docs/design/datasets/: index.md
docs/design/datasets/sources/: index.md
docs/design/datasets/sources/anvisa/: categories.md  index.md
docs/design/datasets/transform/: extractor.md  index.md
docs/design/sources/anvisa/: categories.md
docs/docs/: architecture.md  getting-started.md  index.md  reference.md
docs/docs/reference/: reference.md
docs/docs/reference/scraper/: selenium.md
docs/docs/reference/scraper/anvisa/: build_index.md
docs/reference/: index.md
docs/reference/config/: tree.md
docs/reference/datasets/: index.md
docs/reference/datasets/sources/anvisa/: categories.md  index.md
docs/reference/scraper/: index.md
docs/reference/scraper/anvisa/: anvisa.md  catalog.md  config.md  index.md  pipelines.md
docs/reference/sources/anvisa/: catalog.md  categories.md
docs/reference/utils/: selenium.md
drugslm/: __init__.py  config.py  definitions.py  loguru.py
drugslm/config/: __init__.py  static.py  tree.py
drugslm/dataset/: __init__.py
drugslm/dataset/anvisa/: build_drug_index.py  config.py  search.py
drugslm/features/: features.py
drugslm/modeling/: predict.py  train.py
drugslm/resources/: selenium.py
drugslm/scraper/: selenium.py
drugslm/scraper/anvisa/: build_index.py  catalog.py  config.py  index.py  leaflets.py  pipelines.py
drugslm/sources/anvisa/: __init__.py  catalog.py  categories.py  leaflets.py
drugslm/utils/: asserts.py  logging.py  loguru.py  selenium.py
drugslm/visualize/: plots.py
leaflets/: __init__.py  config.py  features.py  plots.py
leaflets/dataset/: __init__.py
leaflets/modeling/: predict.py  train.py
leaflets/utils/: selenium.py
lslm/: __init__.py  definitions.py
lslm/dataset/: __init__.py  features.py
lslm/modeling/: predict.py  train.py
lslm/resources/: selenium.py
lslm/utils/: selenium.py
lslm/visualize/: plots.py
notebooks/: 0.1.ollama_test.ipynb  0.2.selenium_test.ipynb  0.3.check_anvisa_scraper.ipynb
pipelines/: definitions.py
pipelines/resources/: selenium.py
scripts/: start-dagster.sh  stop-dagster.sh
settings/: firefox.yaml
storage/history/: runs.db
storage/history/runs/: index.db
storage/schedules/: schedules.db
thoughts/: DockerfileMultiStageExample.md  MakefileAlternative  SplitITOut  Wikipedia  dagster  honcho
