[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drugslm"
# version = "0.0.1"
dynamic = ["version"]

[tool.hatch.version]
path = ".env"
pattern = "VERSION=['\"]?(?P<version>[^'\"]+)['\"]?"

description = "Consolidated repository for ETL, modeling, experiments, and deployment of the master's thesis in Computer Science at the Department of Computer Science of the Federal University of Paran\u00e1, Curitiba - Brazil, focusing on the development of a Small Language Model (SLM) using drug package inserts."
authors = [
  { name = "Vinícius de Lima Gonçalves" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.12.0"

dependencies = [
    "beautifulsoup4>=4.14.2",
    "dagster==1.12.1",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
    "retry>=0.9.2",
    "selenium>=4.38.0,<5.0",
    "tqdm>=4.60.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "dagster-webserver==1.12.1",
    "ipykernel>=7.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
    "pip>=25.3",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[tool.hatch.build]
packages = [
    "drugslm"
]

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.ruff]
line-length = 99
src = ["drugslm"]
include = ["pyproject.toml", "drugslm/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["drugslm"]
force-sort-within-sections = true
